@@ -1,3 +1,13 @@
+2019-09-11  Joseph Pecoraro  <pecoraro@apple.com>
+
+        Web Inspector: Do not show override actions unless Sources tab is enabled
+        https://bugs.webkit.org/show_bug.cgi?id=201708
+
+        Reviewed by Devin Rousso.
+
+        * UserInterface/Controllers/NetworkManager.js:
+        (WI.NetworkManager.supportsLocalResourceOverrides):
+
 2019-09-11  Devin Rousso  <drousso@apple.com>
 
         Web Inspector: Canvas: checkerboard has too much contrast in dark mode
